--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -13,42 +13,31 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav">
-        <li><a href="<%= user_path(current_user) %>">Home</a></li>
-        <li><a href="<%= books_path %>">Books</a></li>
-        <li><a href="<%= users_path %>">People</a></li>
-        <li><a href="<%= clubs_path %>">Clubs</a></li>
-      </ul>
-      <form class="navbar-form navbar-left" id="general-search" role="search">
-        <div class="input-group input-group-sm">
-          <input type="text" class="form-control">
-          <span class="input-group-btn">
-            <button class="btn btn-default" type="button">
-              <span class="glyphicon glyphicon-search"></span>
-            </button>
-          </span>
-        </div>
-      </form> -->
 
+      <ul id="navbar-right" class="nav navbar-nav navbar-right">
+            
+            <li id="universal-search-container" class="dropdown">
+              <form id="universal-search" class="navbar-form navbar-left" action="/search" role="search">
+                <div class="input-group">
+                  <input name="search_size" type="hidden" value="small">
+                  <input name="search" type="text" class="form-control" placeholder="Search for books or people">
+                  <span class="input-group-btn">
+                    <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                  </span>
+                </div>
+              </form>
+              <ul id="searchbar-dropdown" class="dropdown-menu">
+                <ul id="small-list-tabs" class="nav nav-tabs nav-justified">
+                  <li id="books-tab" role="presentation" class="active"><a href="#">Books</a></li>
+                  <li id="people-tab" role="presentation"><a href="#">People</a></li>
+                </ul>
+              </ul>
+            </li>
 
-
-
-
-      <ul class="nav navbar-nav navbar-right">
-        <form id="universal-search" class="navbar-form navbar-left" role="search">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search for books or people">
-            <span class="input-group-btn">
-              <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
-            </span>
-          </div>
-        </form>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" id="current-user-menu" data-toggle="dropdown" role="button" aria-expanded="false"><%= image_tag('alert-inactive.png', class: "img-rounded") %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><%= link_to 'Profile', user_path(current_user) %></li>
-            <li><%= link_to 'Settings', edit_user_path(current_user) %></li>
-            <li><%= link_to 'Log out', session_path(current_user), method: 'delete' %></li>
+            <li><a href="#">Coming Soon!</a></li>
           </ul>
         </li>
         <li class="dropdown">
